plugins {
    id 'java-library'
}

group 'pp.muza.monopoly'
version '0.1'

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use Mockito for mocking in unit tests
    testImplementation libs.mockito
    // Use JUnit Jupiter for testing.
    testImplementation libs.junit.jupiter
    // Use Lombok for generating getters and setters.
    testCompileOnly libs.lombok
    testAnnotationProcessor libs.lombok

    // This dependency is used by the application.
    implementation libs.guava
    implementation libs.logback
    compileOnly libs.lombok
    annotationProcessor libs.lombok

    testImplementation libs.jackson.databind
    testImplementation libs.commons.text
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}


